Better(?) sun and moon; clouds added!

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -33,7 +33,7 @@ include(drivers/sdcard/sdcard)
 # Add your source files
 add_executable(${NAME}
     main.cpp tree.cpp world.cpp
-    sprite_sun.cpp sprite_moon.cpp
+    sprite_sun.cpp sprite_moon.cpp sprite_cloudl.cpp sprite_cloudr.cpp
 )
 
 # TODO: Don't forget to link the libraries you need!
